Adding remark field to db entitiy, Adding websocket  capabilities. When flight edited on aodb client update spring layer using a http put fot updates. Updating ui, saving change to db and placing change on flight update socket topic to notify fids of change. Also adding logging to exception advice controller. Also enabling coors for additional endpoint,

--- a/src/main/client/src/app/components/dashboard/dashboard.component.html
+++ b/src/main/client/src/app/components/dashboard/dashboard.component.html
@@ -69,16 +69,19 @@
         <div class="ui-grid-col-8"><input pInputText id="year" [(ngModel)]="selectedFlightRecord.estimated"/></div>
       </div>
       <div class="ui-grid-row">
-        <div class="ui-grid-col-4"><label for="brand">Gate</label></div>
-        <div class="ui-grid-col-8"><input pInputText id="brand" [(ngModel)]="selectedFlightRecord.gate"/></div>
+        <div class="ui-grid-col-4"><label for="gate">Gate</label></div>
+        <div class="ui-grid-col-8"><input pInputText id="gate" [(ngModel)]="selectedFlightRecord.gate"/></div>
+      </div>
+      <div class="ui-grid-row">
+        <div class="ui-grid-col-4"><label for="remark">Remark</label></div>
+        <div class="ui-grid-col-8"><input pInputText id="remark" [(ngModel)]="selectedFlightRecord.remark"/></div>
       </div>
     </div>
     <p-footer>
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button type="button" pButton icon="fa-close" label="Delete"></button>
-        <button type="button" pButton icon="fa-check" label="Save"></button>
+        <button type="button" pButton icon="fa-check" (click)="save(selectedFlightRecord)" label="Save"></button>
       </div>
     </p-footer>
   </p-dialog>
-
 </div>
