--- a/src/main/client/src/app/components/dashboard/dashboard.component.html
+++ b/src/main/client/src/app/components/dashboard/dashboard.component.html
@@ -56,17 +56,18 @@
     <p-column field="scheduled" header="Scheduled Time Departure"></p-column>
     <p-column field="estimated" header="Estimated Time Departure"></p-column>
     <p-column field="gate" header="Gate"></p-column>
+    <p-column field="remark" header="Remark"></p-column>
   </p-dataTable>
 
-  <p-dialog header="Car Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true">
+  <p-dialog header="Flight Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true">
     <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="selectedFlightRecord">
       <div class="ui-grid-row">
-        <div class="ui-grid-col-4"><label for="vin">Scheduled</label></div>
-        <div class="ui-grid-col-8"><input pInputText id="vin" [(ngModel)]="selectedFlightRecord.scheduled"/></div>
+        <div class="ui-grid-col-4"><label for="scheduled">Scheduled</label></div>
+        <div class="ui-grid-col-8"><input pInputText id="scheduled" [(ngModel)]="selectedFlightRecord.scheduled"/></div>
       </div>
       <div class="ui-grid-row">
-        <div class="ui-grid-col-4"><label for="year">Estimated</label></div>
-        <div class="ui-grid-col-8"><input pInputText id="year" [(ngModel)]="selectedFlightRecord.estimated"/></div>
+        <div class="ui-grid-col-4"><label for="estimated">Estimated</label></div>
+        <div class="ui-grid-col-8"><input pInputText id="estimated" [(ngModel)]="selectedFlightRecord.estimated"/></div>
       </div>
       <div class="ui-grid-row">
         <div class="ui-grid-col-4"><label for="gate">Gate</label></div>
@@ -79,7 +80,7 @@
     </div>
     <p-footer>
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
-        <button type="button" pButton icon="fa-close" label="Delete"></button>
+        <button type="button" pButton icon="fa-close" label="Delete" (click)="delete(selectedFlightRecord)"></button>
         <button type="button" pButton icon="fa-check" (click)="save(selectedFlightRecord)" label="Save"></button>
       </div>
     </p-footer>
